<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartHome Setup</string>
    <string name="welcome_title">Welcome to SmartHome</string>
    <string name="welcome_subtitle">Let\'s set up your smart home devices</string>
    <string name="btn_start_setup">Start Setup</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_scan">Scan for Devices</string>
    <string name="scanning">Scanning network…</string>
    <string name="devices_found">%d device(s) found</string>
    <string name="no_devices_found">No devices found. Make sure devices are powered on.</string>
    <string name="server_url_hint">SmartHome Server URL (e.g. http://192.168.1.100:3000)</string>
    <string name="wifi_ssid_hint">Wi-Fi Network (SSID)</string>
    <string name="wifi_password_hint">Password</string>
    <string name="device_name_hint">Device Name</string>
    <string name="connecting">Connecting…</string>
    <string name="device_added">Device added successfully!</string>
    <string name="setup_complete">Setup Complete!</string>
    <string name="setup_complete_msg">Your devices have been configured. Open the web app to manage them.</string>
    <string name="step_server">1. Server</string>
    <string name="step_wifi">2. Wi-Fi</string>
    <string name="step_discover">3. Discover</string>
    <string name="step_configure">4. Configure</string>
</resources>
